--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -30,7 +30,7 @@ import '../styles/Components/header.css';
             </ul>
             <!-- Mobile Join Button (visible on mobile) -->
             <div class="mobile-join-link">
-                <a href="/register" class="mobile-join-button">Join</a>
+                <a href="/register" class="mobile-join-button">Become Member!</a>
             </div>
         </nav>
         <button 
