--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -46,14 +46,13 @@ import BoardOfDirectors from '../components/BoardOfDirectors.astro';
                 <!-- Board Section -->
                 <BoardOfDirectors />
 
-
                 <!-- History Link -->
                 <section class="section text-center">
                     <h2 class="section-title">Our History</h2>
                     <p class="mb-40">Founded in 2012, T.S.K.V. Spartacus has grown from a small group of enthusiasts to the largest student strength sports association in the Benelux.</p>
                     <a href="/history" class="btn">Explore our History</a>
-                    <div class="about-image">
-                        <img src="/images/Old_Spartacus.jpg" alt="Old-Spartacus">
+                    <div class="history-image-container">
+                        <img src="/images/Old_Spartacus.jpg" alt="Old-Spartacus" class="history-image">
                     </div>
                 </section>
 
