--- a/src/components/BoardOfDirectors.astro
+++ b/src/components/BoardOfDirectors.astro
@@ -41,7 +41,7 @@ const {
       image: "/images/Board_3.png"
     },
     {
-      name: "Sam Aras",
+      name: "Aras",
       role: "Secretary",
       email: "Secretary@tskvspartacus.nl",
       image: "/images/Board_4.png"
