--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -38,7 +38,7 @@ import BoardOfDirectors from '../components/BoardOfDirectors.astro';
                             <p>All our activities are conducted in English, making us fully accessible to the international student community at Tilburg University.</p>
                         </div>
                         <div class="about-image">
-                            <img src="placeholder-mission.jpg" alt="Spartacus members training together">
+                            <img src="spartacus-mission.jpg" alt="Spartacus members organising regionals">
                         </div>
                     </div>
                 </section>
@@ -52,7 +52,7 @@ import BoardOfDirectors from '../components/BoardOfDirectors.astro';
                     <p class="mb-40">Founded in 2012, T.S.K.V. Spartacus has grown from a small group of enthusiasts to the largest student strength sports association in the Benelux.</p>
                     <a href="/history" class="btn">Explore our History</a>
                     <div class="history-image-container">
-                        <img src="/images/Old_Spartacus.jpg" alt="Old-Spartacus" class="history-image">
+                        <img src="/images/Old_Spartacus.jpg" alt="Old Spartacus general members meeting" class="history-image">
                     </div>
                 </section>
 
