--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -82,7 +82,8 @@ import '../styles/pages/index.css';
                         <a href="/about" class="btn">Learn Our Story</a>
                     </div>
                     <div class="about-image">
-                        <img src="/images/LiftingJelle.jpg" alt="Students training at Spartacus">
+                        <img src="/images/Jelle.png" alt="Students training at Spartacus">
+                        <img src="/images/Commentary.png" alt="More students training at Spartacus">
                     </div>
                 </div>
             </section>
