--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -81,9 +81,9 @@ import '../styles/pages/index.css';
                         </br>
                         <a href="/about" class="btn">Learn Our Story</a>
                     </div>
-                    <div class="about-image" style="width: 100%; max-width: 800px; margin: 0 auto; display: flex; gap: 20px;">
-                        <img src="/images/Jelle.png" alt="Students training at Spartacus" style="width: 100%; height: auto; object-fit: cover;">
-                        <img src="/images/Commentary.png" alt="More students training at Spartacus" style="width: 100%; height: auto; object-fit: cover;">
+                    <div class="about-image">
+                        <img src="/images/Jelle.png" alt="Students training at Spartacus">
+                        <img src="/images/Commentary.png" alt="More students training at Spartacus">
                     </div>
                 </div>
             </section>
