--- a/src/styles/pages/about.css
+++ b/src/styles/pages/about.css
@@ -103,9 +103,6 @@
 }
 
 /* Affiliation Section */
-.about-image img:hover {
-  transform: scale(1.05);
-}
 
 /* Media Queries */
 @media (max-width: 768px) {
@@ -145,23 +142,14 @@
   overflow: hidden;
   border-radius: 8px;
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
-  /* transition: transform 0.3s ease, box-shadow 0.3s ease; */
-}
-
-.history-image-container:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.15);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .history-image {
   width: 100%;
   height: auto;
   display: block;
-  /* transition: transform 0.5s ease; */
-}
-
-.history-image-container:hover .history-image {
-  transform: scale(1.02);
+  transition: transform 0.5s ease;
 }
 
 /* Responsive adjustments */
