--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -156,7 +156,7 @@ import '../styles/pages/index.css';
                     <div class="price-amount">Free</div>
                 </div>
                 <ul class="price-features">
-                    <li>Guidance from experienced lifter</li>
+                    <li>Guidance from experienced lifters</li>
                     <li>Every saturday anytime between 1-4pm</li>
                     <li>Free of charge</li>
                     <li>No strings attached</li>
