--- a/src/components/Calendar.astro
+++ b/src/components/Calendar.astro
@@ -16,12 +16,12 @@
             <div class="calendar-wrapper">
                 <!-- Desktop calendar (hidden on small screens) -->
                 <div class="desktop-only calendar-desktop">
-                    <iframe src="https://calendar.google.com/calendar/embed?src=6b350b0422e00092ace0662865d1528635db453bc4ec2ecb9d6d9c0e3356374d%40group.calendar.google.com&ctz=Europe%2FBrussels&bgcolor=%23ffffff&color=%23ba131a&color=%2337001b&color=%23e7c55e" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+                    <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=Europe%2FBrussels&hl=en&showPrint=0&mode=MONTH&showCalendars=0&showTitle=0&src=NmIzNTBiMDQyMmUwMDA5MmFjZTA2NjI4NjVkMTUyODYzNWRiNDUzYmM0ZWMyZWNiOWQ2ZDljMGUzMzU2Mzc0ZEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%237CB342" style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
                 </div>
                 
                 <!-- Mobile calendar (agenda view, visible only on small screens) -->
                 <div class="mobile-only calendar-mobile">
-                    <iframe src="https://calendar.google.com/calendar/embed?src=6b350b0422e00092ace0662865d1528635db453bc4ec2ecb9d6d9c0e3356374d%40group.calendar.google.com&ctz=Europe%2FBrussels&bgcolor=%23ffffff&color=%23ba131a&color=%2337001b&color=%23e7c55e&mode=AGENDA&hl=en" style="border: 0" width="100%" height="500" frameborder="0" scrolling="no"></iframe>
+                    <iframe src="https://calendar.google.com/calendar/embed?height=500&wkst=1&ctz=Europe%2FBrussels&hl=en&showPrint=0&mode=AGENDA&showCalendars=0&showTitle=0&src=NmIzNTBiMDQyMmUwMDA5MmFjZTA2NjI4NjVkMTUyODYzNWRiNDUzYmM0ZWMyZWNiOWQ2ZDljMGUzMzU2Mzc0ZEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%237CB342" style="border-width:0" width="100%" height="500" frameborder="0" scrolling="no"></iframe>
                 </div>
             </div>
             
@@ -29,7 +29,7 @@
             <div class="mobile-only mobile-calendar-alternative">
                 <h3 class="calendar-subtitle">Calendar not displaying properly?</h3>
                 <p>For the best experience on mobile devices, you can:</p>
-                <a href="https://calendar.google.com/calendar/embed?src=6b350b0422e00092ace0662865d1528635db453bc4ec2ecb9d6d9c0e3356374d%40group.calendar.google.com&ctz=Europe%2FBrussels" class="btn btn-secondary mobile-calendar-btn" target="_blank">Open Calendar in Browser</a>
+                <a href="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=Europe%2FBrussels&hl=en&showPrint=0&mode=MONTH&showCalendars=0&showTitle=0&src=NmIzNTBiMDQyMmUwMDA5MmFjZTA2NjI4NjVkMTUyODYzNWRiNDUzYmM0ZWMyZWNiOWQ2ZDljMGUzMzU2Mzc0ZEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%237CB342" class="btn btn-secondary mobile-calendar-btn" target="_blank">Open Calendar in Browser</a>
             </div>
         </div>
         
