--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -60,7 +60,7 @@ import BoardOfDirectors from '../components/BoardOfDirectors.astro';
                 <section class="section text-center">
                     <h2 class="section-title">Our Future</h2>
                     <p class="mb-40">Join T.S.K.V. Spartacus today and become part of our continuing story. Your journey with us starts now!</p>
-                    <a href="/become-a-member" class="btn">Be part of Our Future</a>
+                    <a href="/become-a-member" class="btn">Be Part of Our Future</a>
                 </section>
             </div>
         </main>
