committee page border changes

--- a/src/pages/committee.astro
+++ b/src/pages/committee.astro
@@ -28,6 +28,7 @@ import BoardOfDirectors from '../components/BoardOfDirectors.astro';
 
     <!-- Main Content -->
     <main>
+        <div class="container">
             <!-- Board Section -->
             <BoardOfDirectors />
 
@@ -216,36 +217,6 @@ import BoardOfDirectors from '../components/BoardOfDirectors.astro';
                             </div>
                         </div>
                     </div>    
-
-                    <!-- Advisory Board Committee Card -->
-                    <div class="committee-card">
-                        <div class="committee-header">
-                            <div class="committee-icon">
-                                <i class="fas fa-users-cog"></i>
-                            </div>
-                            <div class="committee-title-wrapper">
-                                <h3 class="committee-title">ADVISORY BOARD</h3>
-                                <p class="committee-head">Coordinated by: Ezra Janssen</p>
-                            </div>
-                        </div>
-                        <div class="committee-content">
-                            <p class="committee-description">The Advisory Board consists of former board members who provide guidance, institutional knowledge, and continuity to the current Board of Directors. They offer valuable perspective and help maintain Spartacus traditions while supporting innovation.</p>
-                            
-                            <div class="committee-details">
-                                <h4>Committee Details</h4>
-                                <ul class="committee-list">
-                                    <li>2-4 former board members</li>
-                                    <li>Meets quarterly with current Board</li>
-                                    <li>Previous leadership experience in the association required</li>
-                                    <li>Provides mentorship to new board members</li>
-                                </ul>
-                            </div>
-                            
-                            <div class="committee-join">
-                                <a href="#volunteer-section" class="btn">LEARN MORE</a>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </section>
 
