--- a/src/pages/history.astro
+++ b/src/pages/history.astro
@@ -118,7 +118,7 @@ import '../styles/pages/history.css';
                     <blockquote>
                         <p>"In October 2011 the first ideas for Spartacus were put on paper. While the students training at the Tilburg University Sport Center always felt among friends in the gym, we lacked an association to call home. Sjoerd van der Zee and Tijn Schraa were determined to change that, and after the first promotions Spartacus ended the year already with 45 members! In the beginning of 2012 Jeroen de Beer joined as 3rd member of the first board and T.S.S.V. Spartacus was ready for the official foundation in March. The first year was a year of many firsts; clinics, sponsors, drinks, TOP-week participation and finally the hand-over of a fully operational association to the 2nd board. With subsequent board members all making their mark on the legacy of T.S.K.V. Spartacus, we`ve all shared one vision: to bring students with a passion for strength sports together. And it is the commitment to that vision that has grown T.S.K.V. Spartacus to the largest student strength sports association of the Benelux!" </p>
                     </blockquote>
-                    <p class="text-right"> - Sjoerd van der Zee, Founding Member, T.S.K.V. Spartacus</p>
+                    <p class="text-right"> - Tijn Schraa, Founding Member, T.S.K.V. Spartacus</p>
                 </div>
             </div>
 
