--- a/src/pages/history.astro
+++ b/src/pages/history.astro
@@ -105,7 +105,7 @@ import '../styles/pages/history.css';
                 </div>
                 <div class="about-text">
                     <blockquote>
-                        "Het maakt mij ongelooflijk trots om te zien dat Spartacus zoveel jaar later nog steeds een positieve impact heeft op haar leden. In de beginjaren stond de vereniging nog een beetje apart. Maar door de vastberadenheid en passie van onze leden en besturen, is Spartacus door de jaren heen uitgegroeid tot een onmisbaar onderdeel van het studentenleven in Tilburg. De verenging heeft mij zeer dierbare herinneringen, vriendschappen en ervaringen gegeven die ik al die jaren later nog steeds koester!"
+                        <p>"It makes me incredibly proud to see that Spartacus, even after so many years, still has a positive impact on its members. In the early years, the association was still somewhat separate. But through the determination and passion of our members and boards, Spartacus has grown over the years into an indispensable part of student life in Tilburg. The association has given me very dear memories, friendships, and experiences that I still cherish all these years later!"</p>
                     </blockquote>
                     <p class="text-right"> - Sjoerd van der Zee, Founding Member, T.S.K.V. Spartacus</p>
                 </div>
