--- a/src/pages/committee/boards.astro
+++ b/src/pages/committee/boards.astro
@@ -4,6 +4,7 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 import '../../styles/pages/board.css';
+import '../../styles/global.css';
 ---
 
 <!DOCTYPE html>
