--- a/src/pages/committee.astro
+++ b/src/pages/committee.astro
@@ -106,7 +106,7 @@ import BoardOfDirectors from '../components/BoardOfDirectors.astro';
                             </div>
                             <div class="committee-title-wrapper">
                                 <h3 class="committee-title">MEDIA COMMITTEE</h3>
-                                <p class="committee-head">Led by: Sam Aras</p>
+                                <p class="committee-head">Led by: Aras</p>
                             </div>
                         </div>
                         <div class="committee-content">
