--- a/src/pages/history.astro
+++ b/src/pages/history.astro
@@ -112,7 +112,7 @@ import '../styles/pages/history.css';
 
                 <div class="about-content">
                 <div class="about-image">
-                    <img src="/images/Tijn_1" alt="Spartacus Founder">
+                    <img src="/images/Board_1" alt="Spartacus Founder">
                 </div>
                 <div class="about-text">
                     <blockquote>
