--- a/src/pages/history.astro
+++ b/src/pages/history.astro
@@ -101,7 +101,7 @@ import '../styles/pages/history.css';
             <h2 class="section-title centered-title">Words from Our Founders</h2>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="/images/Sjoerd_1" alt="Spartacus Founder">
+                    <img src="/images/Sjoerd_1.png" alt="Spartacus Founder">
                 </div>
                 <div class="about-text">
                     <blockquote>
@@ -112,7 +112,7 @@ import '../styles/pages/history.css';
 
                 <div class="about-content">
                 <div class="about-image">
-                    <img src="/images/Jelle.png" alt="Spartacus Founder">
+                    <img src="/images/Tijn_1.png" alt="Spartacus Founder">
                 </div>
                 <div class="about-text">
                     <blockquote>
