committee page changes

--- a/src/pages/committee.astro
+++ b/src/pages/committee.astro
@@ -56,7 +56,7 @@ import BoardOfDirectors from '../components/BoardOfDirectors.astro';
                                 <h4>Committee Details</h4>
                                 <ul class="committee-list">
                                     <li>5-7 active members</li>
-                                    <li>Meets bi-monthly, more frequently before competitions</li>
+                                    <li>Meets frequently before competitions</li>
                                     <li>Basic knowledge of powerlifting preferred</li>
                                     <li>Opportunity to work with KNKF officials</li>
                                 </ul>
