committee page changes

--- a/src/pages/committee.astro
+++ b/src/pages/committee.astro
@@ -206,7 +206,7 @@ import BoardOfDirectors from '../components/BoardOfDirectors.astro';
                                 <h4>Committee Details</h4>
                                 <ul class="committee-list">
                                     <li>3-5 active members</li>
-                                    <li>Meets biweekly</li>
+                                    <li>Meets when tech support is needed</li>
                                     <li>Programming, web development, or IT skills required</li>
                                     <li>Opportunity to develop real-world technical solutions</li>
                                 </ul>
